# thirdeye

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  build-injector.sh  config.example.yaml
bridge/: Dockerfile  pyproject.toml
bridge/src/thirdeye_bridge/: __init__.py  bridge.py  camera_manager.py  classifier.py  config.py  injector_client.py  snapshot.py
bridge/tests/: test_classifier.py  test_injector_client.py
docker/: docker-compose.yml
injector/: Makefile  config.go  db.go  go.mod  handler.go  main.go  schema.go  validate.go
src/reolink_protect_bridge/: __init__.py
systemd/: thirdeye-injector.service
